prototypes/v2/test-data/elab/record-literal/record-proj-field-missing.snapshot
exit status: 0

stdout = """
#error : #error
#error : #error
"""

stderr = """
error: Field `x` not found
  ┌─ test-data/elab/record-literal/record-proj-field-missing.pion:1:11
  │
1 │ #check {}.x;
  │           ^

error: Field `z` not found
  ┌─ test-data/elab/record-literal/record-proj-field-missing.pion:2:19
  │
2 │ #check {x=0, y=1}.z;
  │                   ^
"""
